--- a/lesson6/task4/main.css
+++ b/lesson6/task4/main.css
@@ -1,12 +1,13 @@
-.already-learned ol>li {
+.already-learned ol {
     background-color: green;
+    color: white;
 }
 
 .already-learned li {
     color: white;
 }
 
-.to-be-learned ol>li {
+.to-be-learned ol {
     background-color: orange;
     color: green;
 }
