--- a/lesson7/task2/main.css
+++ b/lesson7/task2/main.css
@@ -12,10 +12,10 @@ li:last-child>span {
     color: white;
 }
 
-li:nth-child(even) {
+li:nth-child(even) span {
     margin-left: 16px;
 }
 
-.paragraphs p:nth-child(odd) {
+.paragraphs p:first-child {
     background-color: grey;
 }
