--- a/lesson8/task2/main.css
+++ b/lesson8/task2/main.css
@@ -8,4 +8,5 @@ div {
     border-bottom: 10px dashed burlywood;
     border-left: 20px dashed aqua;
     border-top: 10px solid firebrick;
+    font-size: 24px;
 }
