--- a/lesson8/task6/main.css
+++ b/lesson8/task6/main.css
@@ -2,19 +2,23 @@
     padding: 50px;
     margin: 50px;
     background-color: blue;
+    border: 2px solid black;
 }
 
 .yellow {
     padding: 50px;
     background-color: yellow;
+    border: 2px solid black;
 }
 
 .green {
     padding: 50px;
     background-color: green;
+    border: 2px solid black;
 }
 
 .pink {
     padding: 50px;
     background-color: pink;
+    border: 2px solid black;
 }
