--- a/lesson9/task5/styles.css
+++ b/lesson9/task5/styles.css
@@ -8,9 +8,8 @@
 
 .header nav li {
     float: left;
-    margin-left: 20px;
+    margin: 0 16px 0 16px;
     position: relative;
-    bottom: 5px;
     color: white;
     list-style-type: none;
 }
@@ -23,11 +22,12 @@ main {
 .head {
     width: 200px;
     height: 200px;
-    background-color: aqua;
+    background-color: #7effd4;
     position: absolute;
     transform: translate(0, -50%);
     top: 50%;
-    left: 9%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
 }
 
