--- a/lesson9/task5/styles.css
+++ b/lesson9/task5/styles.css
@@ -10,6 +10,7 @@
     float: left;
     margin-left: 16px;
     position: relative;
+    top: -4px;
     color: white;
     list-style-type: none;
 }
@@ -18,6 +19,7 @@
     float: left;
     margin-left: 21px;
     position: relative;
+    top: -4px;
     color: white;
     list-style-type: none;
 }
@@ -26,6 +28,7 @@
     float: left;
     margin-left: 21px;
     position: relative;
+    top: -4px;
     color: white;
     list-style-type: none;
 }
