--- a/lesson9/task5/styles.css
+++ b/lesson9/task5/styles.css
@@ -9,8 +9,9 @@
 .header nav li:first-child {
     float: left;
     margin-left: 16px;
+    padding: 5px 0 5px 0;
     position: relative;
-    top: -5px;
+    top: -10px;
     color: white;
     list-style-type: none;
 }
@@ -19,7 +20,8 @@
     float: left;
     margin-left: 21px;
     position: relative;
-    top: -5px;
+    padding: 5px 0 5px 0;
+    top: -10px;
     color: white;
     list-style-type: none;
 }
@@ -28,7 +30,8 @@
     float: left;
     margin-left: 21px;
     position: relative;
-    top: -5px;
+    padding: 5px 0 5px 0;
+    top: -10px;
     color: white;
     list-style-type: none;
 }
