--- a/lesson10/task1/styles.css
+++ b/lesson10/task1/styles.css
@@ -11,6 +11,7 @@ span {
 
 .vertical {
     display: flex;
+    flex-direction: column;
     height: 200px;
     justify-content: space-around;
     align-items: space-around;
