--- a/lesson11/task3/styles.css
+++ b/lesson11/task3/styles.css
@@ -1,3 +1,7 @@
+body {
+    display: flex;
+}
+
 .menu-list {
     display: none;
     position: absolute;
@@ -9,25 +13,23 @@
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     width: 120px;
-    position: absolute;
 }
 
 .menu-button {
     background-color: darkgreen;
-    opacity: 0.8;
     font-size: 16px;
-    color: white;
     cursor: pointer;
+    color: white;
+    opacity: 0.8;
 }
 
 .menu-button:hover {
     font-size: 16px;
-    color: white;
+    opacity: 1;
 }
 
 .dropdown {
     position: relative;
-    display: inline-block;
     margin: 16px;
     padding: 16px;
     cursor: pointer;
