--- a/lesson11/task3/styles.css
+++ b/lesson11/task3/styles.css
@@ -2,18 +2,6 @@ body {
     display: flex;
 }
 
-.menu-list {
-    display: none;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    margin: 0;
-    background-color: lightcyan;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    width: 120px;
-}
-
 .menu-button {
     background-color: darkgreen;
     font-size: 16px;
@@ -26,7 +14,20 @@ body {
     opacity: 1;
 }
 
+.menu-list {
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    margin: 0;
+    background-color: lightcyan;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    width: 120px;
+}
+
 .dropdown {
+    opacity: 0.8;
     position: relative;
     margin: 16px;
     padding: 16px;
