--- a/lesson11/task3/styles.css
+++ b/lesson11/task3/styles.css
@@ -20,6 +20,7 @@ body {
     top: 50px;
     left: 0;
     margin: 0;
+    padding: 0;
     background-color: lightcyan;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -33,6 +34,10 @@ body {
     padding: 16px;
     cursor: pointer;
     background-color: darkgreen;
+}
+
+.dropdown:hover .menu-button {
+    opacity: 1;
 }
 
 .menu-item {
