--- a/lesson11/task3/styles.css
+++ b/lesson11/task3/styles.css
@@ -1,48 +1,35 @@
-body {
-    display: flex;
-}
-
-.menu-button {
-    background-color: darkgreen;
-    font-size: 16px;
-    cursor: pointer;
-    color: white;
-}
-
-.menu-button:hover {
-    font-size: 16px;
-    opacity: 1;
-}
-
-.menu-list {
-    display: none;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    background-color: lightcyan;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    width: 120px;
+* {
+    box-sizing: border-box;
 }
 
 .dropdown {
-    opacity: 0.8;
     position: relative;
+    display: inline-block;
     margin: 16px;
     padding: 16px;
+    color: white;
+    line-height: 18px;
     cursor: pointer;
     background-color: darkgreen;
 }
 
-.dropdown:hover .menu-button {
-    opacity: 1;
+.menu-list {
+    position: absolute;
+    display: none;
+    margin: 0;
+    padding: 0;
+    top: 50px;
+    left: 0;
+    min-width: 120px;
+    z-index: 1;
+    list-style-type: none;
+    color: black;
+    background-color: lightcyan;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
 
 .menu-item {
     padding: 16px;
-    list-style-type: none;
 }
 
 .dropdown:hover .menu-list {
