--- a/lesson11/task3/styles.css
+++ b/lesson11/task3/styles.css
@@ -1,37 +1,21 @@
-* {
-    box-sizing: border-box;
+.menu-list {
+    display: none;
+}
+
+.menu-button {
+    padding: 16px;
+    background-color: darkgreen;
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.menu-button:hover {
+    opacity: 1;
+    font-size: 16px;
+    color: white;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
-    margin: 16px;
     padding: 16px;
-    color: white;
-    line-height: 18px;
-    cursor: pointer;
-    background-color: darkgreen;
-}
-
-.menu-list {
-    position: absolute;
-    display: none;
-    margin: 0;
-    padding: 0;
-    top: 50px;
-    left: 0;
-    min-width: 120px;
-    z-index: 1;
-    list-style-type: none;
-    color: black;
-    background-color: lightcyan;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-}
-
-.menu-item {
-    padding: 16px;
-}
-
-.dropdown:hover .menu-list {
-    display: block;
+    margin-top: 16px;
 }
