--- a/lesson11/task3/styles.css
+++ b/lesson11/task3/styles.css
@@ -1,5 +1,17 @@
+body {
+    display: flex;
+}
+
 .menu-list {
     display: none;
+    position: absolute;
+    top: 65px;
+    margin: 0;
+    padding: 0;
+    background-color: lightcyan;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    min-width: 120px;
+    z-index: 1;
 }
 
 .menu-button {
@@ -7,15 +19,24 @@
     background-color: darkgreen;
     opacity: 0.8;
     cursor: pointer;
+    color: white;
 }
 
 .menu-button:hover {
     opacity: 1;
     font-size: 16px;
-    color: white;
 }
 
 .dropdown {
     padding: 16px;
-    margin-top: 16px;
+    margin: 16px;
+}
+
+.menu-item {
+    padding: 16px;
+    list-style: none;
+}
+
+.dropdown:hover .menu-list {
+    display: block;
 }
