--- a/lesson11/task3/styles.css
+++ b/lesson11/task3/styles.css
@@ -2,42 +2,51 @@ body {
     display: flex;
 }
 
-.menu-list {
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin: 16px;
+}
+
+​ .menu-button {
+    display: block;
+    background-color: darkgreen;
+    opacity: 0.8;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+​ .menu-list {
+    padding: 0;
+    margin: 0;
     display: none;
     position: absolute;
-    top: 67px;
-    margin: 0;
-    padding: 0;
     background-color: lightcyan;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
     min-width: 120px;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
-.menu-button {
+​ .menu-item {
+    color: black;
     padding: 16px;
-    background-color: darkgreen;
-    opacity: 0.8;
-    cursor: pointer;
-    color: white;
-}
-
-.dropdown:hover .menu-button {
-    opacity: 1;
-    font-size: 16px;
-    padding: 16px;
-}
-
-.dropdown {
-    padding: 16px;
-    margin-top: 16px;
-}
-
-.menu-item {
-    padding: 16px;
-    list-style: none;
-}
-
-.dropdown:hover .menu-list {
+    text-decoration: none;
     display: block;
 }
+
+​ .menu-item:hover {
+    background-color: ghostwhite;
+}
+
+​ .dropdown:hover .menu-list {
+    display: block;
+}
+
+​ .dropdown:hover .menu-button {
+    opacity: 1;
+}
+
+Collapse
