--- a/lesson11/task4/styles.css
+++ b/lesson11/task4/styles.css
@@ -7,6 +7,8 @@ div {
 span {
     position: relative;
     background-color: grey;
+    bottom: 10px;
+    left: 15px;
     border-radius: 4px;
     padding: 8px;
     color: white;
