--- a/lesson12/task2/styles.css
+++ b/lesson12/task2/styles.css
@@ -1,18 +1,19 @@
-header {
-    text-align: center;
+body {
+    font-family: Verdana;
 }
 
 h1 {
+    text-align: center;
     font-size: 74px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    width: 50%;
-    margin: 16px auto;
+    width: 50vw;
+    margin: 0 auto;
 }
 
 div {
-    height: 216px;
+    height: 200px;
     background-color: coral;
     color: white;
     text-transform: uppercase;
