--- a/lesson12/task1/styles.css
+++ b/lesson12/task1/styles.css
@@ -18,7 +18,7 @@ p {
 }
 
 .bold {
-    font-weight: 700;
+    font-weight: bold;
     letter-spacing: 3px;
     font-size: 24px;
     opacity: 0.8;
