--- a/lesson12/task3/styles.css
+++ b/lesson12/task3/styles.css
@@ -2,17 +2,18 @@
     font-size: 1.5em;
 }
 
+.list {
+    list-style-type: none;
+}
+
 .third {
     text-decoration: green underline;
-    list-style-type: none;
 }
 
 .second {
     text-decoration: line-through;
-    list-style-type: none;
 }
 
 .first {
     text-decoration: red overline;
-    list-style-type: none;
 }
