--- a/lesson13/task4/styles.css
+++ b/lesson13/task4/styles.css
@@ -1,5 +1,8 @@
+.gallery {
+    display: flex;
+}
+
 .image {
-    float: left;
     width: 200px;
     height: 200px;
     background-size: contain;
