--- a/lesson15/task1/styles.css
+++ b/lesson15/task1/styles.css
@@ -20,13 +20,17 @@
 }
 
 .card {
-    line-height: 30px;
     margin: 16px;
     box-shadow: 0px 7px 18px -8px rgba(0, 0, 0, 0.75);
 }
 
+.card img {
+    background-position: center;
+}
+
 .text {
     text-align: center;
+    line-height: 30px;
 }
 
 .opacity {
