--- a/lesson16/task1/styles.css
+++ b/lesson16/task1/styles.css
@@ -1,3 +1,12 @@
 div {
     margin: 16px;
 }
+
+.choose-gender {
+    position: relative;
+}
+
+.male {
+    position: relative;
+    right: 3px;
+}
