--- a/lesson16/task3/styles.css
+++ b/lesson16/task3/styles.css
@@ -1,7 +1,8 @@
 .checkbox {
     position: relative;
-    padding-left: 30px;
+    padding-left: 35px;
     font-size: 24px;
+    margin: 16px;
 }
 
 input[type="checkbox"] {
