--- a/lesson16/task3/styles.css
+++ b/lesson16/task3/styles.css
@@ -3,6 +3,8 @@
     padding-left: 35px;
     font-size: 24px;
     margin: 16px;
+    display: block;
+    cursor: pointer;
 }
 
 input[type="checkbox"] {
