--- a/lesson16/task5/styles.css
+++ b/lesson16/task5/styles.css
@@ -1,6 +1,10 @@
-div {
-    margin-bottom: 10px;
-    margin: 16px;
+* {
+    box-sizing: border-box;
+}
+
+input,
+select {
+    margin-bottom: 8px;
 }
 
 .main-form {
@@ -8,5 +12,5 @@ div {
 }
 
 input[name="birthTime"] {
-    padding-right: 30px;
+    padding: 3px 30px 3px 3px;
 }
