--- a/lesson17/task2/styles.css
+++ b/lesson17/task2/styles.css
@@ -25,3 +25,20 @@ th {
 tbody>tr:nth-child(odd) {
     background-color: #f2f2f2;
 }
+
+tbody>tr:hover {
+    background-color: #aaa;
+    color: white;
+}
+
+caption {
+    margin-bottom: 8px;
+}
+
+thead {
+    background-color: aqua;
+}
+
+tfoot {
+    font-weight: 700;
+}
