--- a/lesson17/task3/styles.css
+++ b/lesson17/task3/styles.css
@@ -9,6 +9,10 @@ td {
     text-align: center;
 }
 
+th {
+    font-weight: 400;
+}
+
 table {
     border: 1px solid black;
     border-collapse: collapse;
