--- a/lesson19/task1/styles.css
+++ b/lesson19/task1/styles.css
@@ -4,13 +4,13 @@
 
 .rect {
     background-color: coral;
-    margin: 16px;
+    margin-bottom: 16px;
     text-align: center;
     line-height: 100px;
     opacity: 0.5;
     width: 100px;
     height: 100px;
-    transition: width 2s, opacity 0.5s;
+    transition: width 1s, opacity 0.5s;
 }
 
 .rect:hover {
