--- a/lesson19/task3/styles.css
+++ b/lesson19/task3/styles.css
@@ -25,4 +25,5 @@
     animation: moving 2s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in;
+    animation-direction: alternate;
 }
