--- a/lesson19/task3/styles.css
+++ b/lesson19/task3/styles.css
@@ -22,8 +22,8 @@
     width: 10px;
     height: 4px;
     border-radius: 2px;
-    animation: moving 2s;
+    animation: moving 2s, blinking 2s;
     animation-iteration-count: infinite;
-    animation-timing-function: ease-in;
+    animation-timing-function: linear;
     animation-direction: alternate;
 }
