--- a/lesson19/task3/styles.css
+++ b/lesson19/task3/styles.css
@@ -1,5 +1,4 @@
 .container {
-    width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -7,13 +6,16 @@
 }
 
 .spinner {
+    position: relative;
+}
+
+.spinner-text {
     font-family: monospace;
     font-size: 16px;
     text-transform: uppercase;
     animation: blinking 2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    position: relative;
 }
 
 .rect {
@@ -22,7 +24,7 @@
     width: 10px;
     height: 4px;
     border-radius: 2px;
-    animation: moving 2s;
+    animation: moving 2s, blinking 2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-direction: alternate;
