--- a/lesson19/task3/styles.css
+++ b/lesson19/task3/styles.css
@@ -28,4 +28,5 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-direction: alternate;
+    width: 1px;
 }
