--- a/lesson19/task4/styles.css
+++ b/lesson19/task4/styles.css
@@ -4,16 +4,17 @@ body {
 }
 
 .block {
+    display: flex;
+    align-items: center;
     position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: 700;
     color: white;
     text-transform: uppercase;
-    text-align: center;
-    line-height: 100px;
     width: 200px;
     height: 100px;
+    text-align: start;
     border-radius: 10px;
     background-color: coral;
     animation: move 2s;
