--- a/lesson19/task3/styles.css
+++ b/lesson19/task3/styles.css
@@ -1,31 +1,28 @@
-.container {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.spinner {
+.rect {
+    width: 10px;
+    height: 4px;
+    background-color: black;
+    border-radius: 2px;
     position: relative;
+    animation-name: moving, blinking;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear;
 }
 
-.spinner-text {
+​ .container {
+    display: flex;
+    height: 100vh;
+}
+
+​ .spinner {
+    margin: auto;
+}
+
+​ .spinner-text {
     font-family: monospace;
     font-size: 16px;
     text-transform: uppercase;
-    animation: blinking 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-}
-
-.rect {
-    position: absolute;
-    background-color: black;
-    width: 10px;
-    height: 4px;
-    border-radius: 2px;
-    animation: moving 2s, blinking 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-direction: alternate;
+    animation: blinking 2s infinite linear;
 }
