--- a/lesson19/task3/styles.css
+++ b/lesson19/task3/styles.css
@@ -1,3 +1,21 @@
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.spinner {
+    margin: auto;
+}
+
+.spinner-text {
+    font-family: monospace;
+    font-size: 16px;
+    text-transform: uppercase;
+    animation: blinking 2s infinite linear;
+}
+
 .rect {
     width: 10px;
     height: 4px;
@@ -9,20 +27,4 @@
     animation-iteration-count: infinite;
     animation-direction: alternate;
     animation-timing-function: linear;
-}
-
-​ .container {
-    display: flex;
-    height: 100vh;
-}
-
-​ .spinner {
-    margin: auto;
-}
-
-​ .spinner-text {
-    font-family: monospace;
-    font-size: 16px;
-    text-transform: uppercase;
-    animation: blinking 2s infinite linear;
 }
