--- a/lesson20/task3/styles.css
+++ b/lesson20/task3/styles.css
@@ -27,6 +27,7 @@
     margin-bottom: 8px;
     border-radius: 50%;
     animation: circle 2s linear infinite;
+    margin-left: 20px;
 }
 
 @keyframes blinking {
