--- a/lesson20/task3/styles.css
+++ b/lesson20/task3/styles.css
@@ -10,6 +10,9 @@
 
 .spinner {
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .spinner-text {
@@ -27,7 +30,6 @@
     margin-bottom: 8px;
     border-radius: 50%;
     animation: circle 2s linear infinite;
-    margin-left: 15px;
 }
 
 @keyframes blinking {
