--- a/lesson20/task3/styles.css
+++ b/lesson20/task3/styles.css
@@ -19,10 +19,11 @@
     font-family: monospace;
     font-size: 16px;
     text-transform: uppercase;
-    animation: blinking 1s linear infinite;
+    animation: blinking 2s linear infinite;
 }
 
 .circle {
+    position: relative;
     width: 50px;
     height: 50px;
     border: 4px solid lightgrey;
