--- a/lesson20/task3/styles.css
+++ b/lesson20/task3/styles.css
@@ -23,14 +23,14 @@
 }
 
 .circle {
-    position: relative;
     width: 50px;
     height: 50px;
+    border-radius: 50%;
+    position: relative;
+    animation: spinning 2s linear infinite;
     border: 4px solid lightgrey;
     border-top: 4px solid black;
     margin-bottom: 8px;
-    border-radius: 50%;
-    animation: circle 2s linear infinite;
 }
 
 @keyframes blinking {
@@ -45,7 +45,7 @@
     }
 }
 
-@keyframes circle {
+@keyframes spinning {
     0% {
         transform: rotate(360deg);
     }
