--- a/lesson20/task3/styles.css
+++ b/lesson20/task3/styles.css
@@ -19,7 +19,7 @@
     font-family: monospace;
     font-size: 16px;
     text-transform: uppercase;
-    animation: blinking 2s linear infinite;
+    animation: blinking 2s infinite linear;
 }
 
 .circle {
@@ -27,7 +27,7 @@
     height: 50px;
     border-radius: 50%;
     position: relative;
-    animation: spinning 2s linear infinite;
+    animation: spinning 2s infinite linear;
     border: 4px solid lightgrey;
     border-top: 4px solid black;
     margin-bottom: 8px;
