--- a/lesson20/task3/styles.css
+++ b/lesson20/task3/styles.css
@@ -20,6 +20,7 @@
     font-size: 16px;
     text-transform: uppercase;
     animation: blinking 2s infinite linear;
+    animation-direction: alternate;
 }
 
 .circle {
