--- a/lesson21/task3/styles.css
+++ b/lesson21/task3/styles.css
@@ -85,4 +85,7 @@ html {
     padding: 0.5em;
     margin: auto;
     display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
