--- a/lesson21/task3/styles.css
+++ b/lesson21/task3/styles.css
@@ -41,11 +41,13 @@ html {
 }
 
 .section {
+    padding: 0.5em;
     width: 60%;
     font-size: 1.25em;
 }
 
 .news {
+    padding: 0.5em;
     width: 20%;
 }
 
