--- a/lesson21/task3/styles.css
+++ b/lesson21/task3/styles.css
@@ -76,14 +76,18 @@ html {
     color: white;
     line-height: 2em;
     margin: 0.5em;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .nav-list-link {
-    min-width: 100%;
+    width: 100%;
     background-color: #808080;
     text-decoration: none;
     color: white;
     margin: 0.5em;
+    margin-left: 0;
+    margin-right: 0;
     padding-left: 0.5em;
     padding-right: 0.5em;
     display: block;
