--- a/lesson21/task3/styles.css
+++ b/lesson21/task3/styles.css
@@ -85,6 +85,7 @@ html {
     color: white;
     margin: 0.5em;
     padding-left: 0.5em;
+    padding-right: 1em;
     display: block;
     overflow: hidden;
     white-space: nowrap;
