--- a/lesson21/task3/styles.css
+++ b/lesson21/task3/styles.css
@@ -37,7 +37,7 @@ html {
 
 .navigation {
     width: 20%;
-    padding-top: 15px;
+    padding: 0.5em;
 }
 
 .section {
@@ -70,21 +70,24 @@ html {
 
 .nav-list {
     padding: 0;
-    list-style-type: none;
 }
 
 .nav-list-item {
+    list-style-type: none;
     background-color: #808080;
+    height: 2em;
     line-height: 2em;
-    margin: 0.5em;
+    color: white;
+    margin-bottom: 0.5em;
 }
 
 .nav-list-link {
+    width: 100%;
+    display: inline-block;
+    padding: 0 0.5em;
     text-decoration: none;
     color: white;
-    padding-left: 0.5em;
-    display: block;
     overflow: hidden;
-    white-space: nowrap;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
