--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -58,7 +58,7 @@ html {
     .fa-bars {
         visibility: visible;
     }
-    .header {
+    .navigation {
         visibility: hidden;
     }
 }
