--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -19,6 +19,7 @@ html {
     visibility: hidden;
     font-size: 2em;
     padding: 0;
+    padding-left: 5px;
     list-style: none;
     border: none;
     background: none;
