--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -11,19 +11,18 @@ html {
     height: 3em;
     padding: 0 1em 0 1em;
     background-color: #eee;
-    display: flex;
-    align-items: center;
+    display: block;
 }
 
 .fa-bars {
     visibility: hidden;
     font-size: 2em;
     padding: 0;
-    padding-left: 5px;
     list-style: none;
     border: none;
     background: none;
     cursor: pointer;
+    line-height: 1.5em;
 }
 
 .navigation {
