--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -39,12 +39,12 @@ html {
     background-color: #808080;
     height: 2em;
     line-height: 2em;
-    color: white;
     margin-bottom: 0.5em;
+    padding: 0;
 }
 
 .nav-list-link {
-    width: 100%;
+    min-width: 100%;
     display: inline-block;
     padding: 0 0.5em;
     text-decoration: none;
