--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -18,6 +18,7 @@ html {
     visibility: hidden;
     font-size: 2em;
     padding: 0;
+    padding-left: 5px;
     list-style: none;
     border: none;
     background: none;
@@ -40,7 +41,7 @@ html {
     height: 2em;
     line-height: 2em;
     margin-bottom: 0.5em;
-    padding: 0;
+    padding-right: 10px;
 }
 
 .nav-list-link {
