--- a/lesson22/task5/styles.css
+++ b/lesson22/task5/styles.css
@@ -95,6 +95,7 @@ html {
 img {
     max-width: 100%;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    height: auto;
 }
 
 @media screen and (max-width: 600px) {
