--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -43,11 +43,11 @@ button {
 }
 
 .nav-list-link {
-    min-width: 100%;
+    color: white;
+    width: 100%;
     display: inline-block;
     padding: 0 0.5em;
     text-decoration: none;
-    color: white;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
