--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -11,7 +11,8 @@ html {
     height: 3em;
     padding: 0 1em 0 1em;
     background-color: #eee;
-    display: block;
+    display: flex;
+    align-items: center;
 }
 
 button {
@@ -23,6 +24,8 @@ button {
     background: transparent;
     cursor: pointer;
     line-height: 1.5em;
+    display: flex;
+    align-items: center;
 }
 
 .navigation {
