--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -26,7 +26,8 @@ button {
     line-height: 1.5em;
     display: flex;
     align-items: center;
-    padding-left: 5px;
+    padding-left: 6px;
+    padding-bottom: 3px;
 }
 
 .navigation {
