--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -55,7 +55,7 @@ button {
     color: white;
     width: 100%;
     display: inline-block;
-    padding: 0 0.5em;
+    padding-left: 0.5em;
     text-decoration: none;
     overflow: hidden;
     text-overflow: ellipsis;
