--- a/lesson22/task4/styles.css
+++ b/lesson22/task4/styles.css
@@ -35,7 +35,7 @@ button {
 }
 
 .navigation {
-    width: 20%;
+    width: 21%;
     padding: 0.5em 0 0 0.5em;
 }
 
@@ -55,6 +55,7 @@ button {
     width: 100%;
     display: inline-block;
     padding: 0 0.5em;
+    padding-right: 0;
     text-decoration: none;
     color: white;
     overflow: hidden;
