--- a/lesson22/task5/styles.css
+++ b/lesson22/task5/styles.css
@@ -1,133 +1,3 @@
-* {
-    box-sizing: border-box;
-}
 
-body {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
 
-.main {
-    flex-grow: 2;
-    display: flex;
-}
-
-html {
-    font-family: Verdana, Tahoma, sans-serif;
-    color: #555;
-    font-size: 16px;
-    height: 100%;
-}
-
-.header {
-    display: flex;
-    justify-content: center;
-    color: white;
-    background-image: linear-gradient(60deg, red, orange)
-}
-
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #e5e5e5;
-    padding: 0.5em;
-}
-
-.navigation {
-    width: 20%;
-    padding: 0.5em;
-}
-
-.section {
-    padding: 0.5em;
-    width: 60%;
-    font-size: 1.25em;
-}
-
-.news {
-    padding: 0.5em;
-    width: 20%;
-}
-
-.units-list {
-    line-height: 1.75em;
-}
-
-.css-units {
-    color: #8b0000;
-    background-color: #e5e5e5;
-    font-size: 1.125em;
-    font-weight: 700;
-}
-
-.section__header {
-    font-size: 5vw;
-    display: flex;
-    justify-content: center;
-}
-
-.nav-list {
-    padding: 0;
-}
-
-.nav-list-item {
-    list-style-type: none;
-    background-color: #808080;
-    height: 2em;
-    line-height: 2em;
-    color: white;
-    margin-bottom: 0.5em;
-}
-
-.nav-list-link {
-    width: 100%;
-    display: inline-block;
-    padding: 0 0.5em;
-    text-decoration: none;
-    color: white;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-img {
-    max-width: 100%;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-    height: auto;
-}
-
-@media screen and (min-width: 900px) {
-    .main {
-        flex-direction: row;
-    }
-}
-
-@media screen and (max-width: 900px) {
-    .main {
-        flex-wrap: wrap;
-    }
-    .navigation {
-        width: 20%;
-    }
-    .section {
-        width: 60%;
-        flex-grow: 1;
-    }
-    .news {
-        width: 100%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .main {
-        flex-direction: column;
-    }
-    .navigation,
-    .section,
-    .news,
-    .footer {
-        width: 100%;
-    }
-}
+/*# sourceMappingURL=styles.css.map */
