--- a/lesson23/task1/styles/header.scss
+++ b/lesson23/task1/styles/header.scss
@@ -13,12 +13,14 @@
     &__item {
         border-radius: $border-radius;
         color: $text-color-secondary;
-        text-transform: uppercase;
         padding: $unit;
         margin-left: $unit;
         font-weight: 700;
         cursor: pointer;
         background-color: $color-secondary;
+        &_selected {
+            background-color: $color-primary;
+        }
     }
     &__item:hover {
         background-color: $color-primary;
