--- a/lesson23/task2/styles.css
+++ b/lesson23/task2/styles.css
@@ -9,25 +9,41 @@ body {
   height: 100vh;
 }
 
-.container .square {
+.square {
   width: 100px;
   height: 100px;
   margin: 8px;
   background-color: #ff7f50;
 }
 @media screen and (min-width: 1200px) {
-  .container .square {
+  .square {
     background-color: #c47;
   }
 }
-@media screen and (max-width: 899px) {
-  .container .square {
+@media screen and (max-width: 1199px) {
+  .square {
     background-color: #a61;
   }
 }
-@media screen and (max-width: 600px) {
-  .container .square {
+@media screen and (max-width: 899px) {
+  .square {
     background-color: #8a2be2;
+  }
+}
+@media screen and (max-width: 600px) {
+  .square {
+    background-color: #ff7f50;
+  }
+}
+
+@media screen and (orientation: portrait) {
+  .container {
+    flex-direction: column;
+  }
+}
+@media screen and (orientation: landscape) {
+  .container {
+    flex-direction: row;
   }
 }
 
