--- a/lesson23/task2/styles/breakpoints.scss
+++ b/lesson23/task2/styles/breakpoints.scss
@@ -32,7 +32,7 @@ $lg: 1199px;
 }
 
 @mixin gorizont {
-    @media screen and(orientation: landscape) {
+    @media (orientation: landscape) and (max-width: $sm) and (max-width: $md) and (max-width: $lg) {
         @content;
     }
 }
