--- a/lesson23/task2/styles/index.scss
+++ b/lesson23/task2/styles/index.scss
@@ -31,9 +31,10 @@ body {
 
 .container {
     @include portrat {
+        display: flex;
         flex-direction: column;
     }
     @include gorizont {
-        flex-direction: row;
+        display: flex;
     }
 }
