--- a/lesson23/task2/styles.css
+++ b/lesson23/task2/styles.css
@@ -12,7 +12,7 @@ body {
 .square {
   width: 100px;
   height: 100px;
-  margin: 8px;
+  margin: 16px;
   background-color: #ff7f50;
 }
 @media screen and (min-width: 1200px) {
@@ -38,12 +38,13 @@ body {
 
 @media screen and (orientation: portrait) {
   .container {
-    flex-direction: column;
+    display: flex;
   }
 }
 @media screen and (orientation: landscape) {
   .container {
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
   }
 }
 
