--- a/lesson23/task2/styles/index.scss
+++ b/lesson23/task2/styles/index.scss
@@ -27,16 +27,7 @@ body {
     @include small {
         background-color: #ff7f50;
     }
-}
-
-.container {
-    display: flex;
-    @include portrat {
-        display: flex;
-        flex-direction: column;
-    }
     @include gorizont {
-        display: flex;
-        flex-direction: row;
+        display: inline-block;
     }
 }
