--- a/lesson23/task2/styles/index.scss
+++ b/lesson23/task2/styles/index.scss
@@ -27,7 +27,7 @@ body {
     @include small {
         background-color: #ff7f50;
     }
-    @include gorizont {
+    @include portrat {
         display: inline-block;
     }
 }
