--- a/lesson23/task2/styles/breakpoints.scss
+++ b/lesson23/task2/styles/breakpoints.scss
@@ -25,6 +25,12 @@ $lg: 1199px;
     }
 }
 
+@mixin portrat {
+    @media screen and (orientation: portrait) {
+        @content;
+    }
+}
+
 @mixin gorizont {
     @media screen and (orientation: landscape) {
         @content;
