--- a/lesson23/task2/styles/index.scss
+++ b/lesson23/task2/styles/index.scss
@@ -27,7 +27,10 @@ body {
     @include small {
         background-color: #ff7f50;
     }
-    @include portrat {
+    @include gorizont {
         display: inline-block;
+    }
+    @include portrat {
+        display: block;
     }
 }
