--- a/lesson23/task3/styles/index.scss
+++ b/lesson23/task3/styles/index.scss
@@ -14,7 +14,7 @@ html {
     margin: 0;
     display: flex;
     flex-direction: row;
-    margin-left: 3em;
+    padding-left: 3em;
     text-transform: uppercase;
     list-style-type: none;
     height: 3em;
@@ -28,6 +28,9 @@ html {
     justify-content: center;
     color: #fff;
     cursor: pointer;
+    &_active {
+        color: #9acd32;
+    }
     &_active:hover {
         background-color: #9acd32;
     }
@@ -50,6 +53,7 @@ html {
     justify-content: space-around;
     height: 140px;
     cursor: pointer;
+    display: none;
     &__item {
         padding: 0 8px 0 8px;
         list-style-type: none;
