--- a/lesson23/task3/styles/index.scss
+++ b/lesson23/task3/styles/index.scss
@@ -29,7 +29,7 @@ html {
     color: #fff;
     cursor: pointer;
     &_active {
-        color: #9acd32;
+        color: #ff0;
     }
     &_active:hover {
         background-color: #9acd32;
