--- a/lesson23/task2/styles.css
+++ b/lesson23/task2/styles.css
@@ -4,45 +4,40 @@
 
 body {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   height: 100vh;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (orientation: landscape) {
+  .container {
+    flex-direction: row;
+  }
 }
 
 .square {
   width: 100px;
   height: 100px;
-  margin: 16px;
   background-color: #ff7f50;
+  margin: 8px;
 }
-@media screen and (min-width: 1200px) {
-  .square {
-    background-color: #c47;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .square {
-    background-color: #a61;
-  }
-}
-@media screen and (max-width: 899px) {
+@media screen and (min-width: 600px) {
   .square {
     background-color: #8a2be2;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 900px) {
   .square {
-    background-color: #ff7f50;
+    background-color: #a61;
   }
 }
-@media screen and (orientation: landscape) {
+@media screen and (min-width: 1200px) {
   .square {
-    display: inline-block;
-  }
-}
-@media screen and (orientation: portrait) {
-  .square {
-    display: block;
+    background-color: #c47;
   }
 }
 
