--- a/lesson23/task2/styles/breakpoints.scss
+++ b/lesson23/task2/styles/breakpoints.scss
@@ -1,38 +1,26 @@
 $sm: 600px;
-$md: 899px;
-$lg: 1199px;
-@mixin small {
-    @media screen and (max-width: $sm) {
+$md: 900px;
+$lg: 1200px;
+@mixin for-extra-small {
+    @media screen and (min-width: $sm) {
         @content;
     }
 }
 
-@mixin middle {
-    @media screen and (max-width: $md) {
-        @content;
-    }
-}
-
-@mixin large {
-    @media screen and (max-width: $lg) {
-        @content;
-    }
-}
-
-@mixin max {
-    @media screen and (min-width: 1200px) {
-        @content;
-    }
-}
-
-@mixin portrat {
-    @media screen and (orientation: portrait) {
-        @content;
-    }
-}
-
-@mixin gorizont {
+@mixin for-landscape {
     @media screen and (orientation: landscape) {
+        @content;
+    }
+}
+
+@mixin for-medium-up {
+    @media screen and (min-width: $md) {
+        @content;
+    }
+}
+
+@mixin for-large-up {
+    @media screen and (min-width: $lg) {
         @content;
     }
 }
